--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web designer,web developer,portfolio" />
     <meta name="author" content="Kishore Johnsan" />
     <link
-      href="/dist/bundle.css"
+      href="dist/bundle.css"
       rel="preload"
       as="style"
       onload="this.rel='stylesheet'"
@@ -659,7 +659,7 @@
         toggleSwitch.addEventListener("change", switchTheme, false);
       </script>
 
-      <script defer src="/dist/bundle.js"></script>
+      <script defer src="dist/bundle.js"></script>
     </div>
   </body>
 </html>
