--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Kishore Johnsan</title>
-    <link rel="icon" type="image/svg+xml" href="/img/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta name="description" content="Kishore Johnsan | Web Designer and Developer" />
     <meta name="keywords" content="web designer,web developer,portfolio" />
@@ -124,7 +124,7 @@
       <div class="wrapper">
         <section class="intro">
           <section class="section-image">
-            <img src="/img/logo.svg" alt="SKJ" />
+            <img src="img/logo.svg" alt="SKJ" />
           </section>
           <section class="section-intro">
             <h1>Hi, I am Kishore Johnsan</h1>
