--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kishore Johnsan</title>
+    <title>Work In Progress</title>
     <link rel="icon" type="image/svg+xml" href="img/logo.svg" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta name="description" content="Kishore Johnsan | Web Designer and Developer" />
