--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <meta name="description" content="Kishore Johnsan | Web Designer and Developer" />
     <meta name="keywords" content="web designer,web developer,portfolio" />
     <meta name="author" content="Kishore Johnsan" />
-    <link
-      href="dist/bundle.css"
-      rel="preload"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
+    <link rel="stylesheet" href="dist/bundle.css">
+   
   </head>
   <body class="mdc-typography">
     <div id="web-content">
@@ -578,86 +574,7 @@
             <li>www.kishorejohnsan.com</li>
           </ul>
         </section>
-      </footer>
-      <script>
-        document.addEventListener("DOMContentLoaded", function () {
-          var lazyloadImages;
-
-          if ("IntersectionObserver" in window) {
-            lazyloadImages = document.querySelectorAll(".lazy");
-            var imageObserver = new IntersectionObserver(function (
-              entries,
-              observer
-            ) {
-              entries.forEach(function (entry) {
-                if (entry.isIntersecting) {
-                  var image = entry.target;
-                  image.classList.remove("lazy");
-                  imageObserver.unobserve(image);
-                }
-              });
-            });
-
-            lazyloadImages.forEach(function (image) {
-              imageObserver.observe(image);
-            });
-          } else {
-            var lazyloadThrottleTimeout;
-            lazyloadImages = document.querySelectorAll(".lazy");
-
-            function lazyload() {
-              if (lazyloadThrottleTimeout) {
-                clearTimeout(lazyloadThrottleTimeout);
-              }
-
-              lazyloadThrottleTimeout = setTimeout(function () {
-                var scrollTop = window.pageYOffset;
-                lazyloadImages.forEach(function (img) {
-                  if (img.offsetTop < window.innerHeight + scrollTop) {
-                    img.src = img.dataset.src;
-                    img.classList.remove("lazy");
-                  }
-                });
-                if (lazyloadImages.length == 0) {
-                  document.removeEventListener("scroll", lazyload);
-                  window.removeEventListener("resize", lazyload);
-                  window.removeEventListener("orientationChange", lazyload);
-                }
-              }, 20);
-            }
-
-            document.addEventListener("scroll", lazyload);
-            window.addEventListener("resize", lazyload);
-            window.addEventListener("orientationChange", lazyload);
-          }
-        });
-      </script>
-      <script>
-        const toggleSwitch = document.querySelector(
-          '.mdc-switch input[type="checkbox"]'
-        );
-        const currentTheme = localStorage.getItem("theme");
-
-        if (currentTheme) {
-          document.documentElement.setAttribute("data-theme", currentTheme);
-
-          if (currentTheme === "dark") {
-            toggleSwitch.checked = true;
-          }
-        }
-
-        function switchTheme(e) {
-          if (e.target.checked) {
-            document.documentElement.setAttribute("data-theme", "dark");
-            localStorage.setItem("theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-theme", "light");
-            localStorage.setItem("theme", "light");
-          }
-        }
-
-        toggleSwitch.addEventListener("change", switchTheme, false);
-      </script>
+      </footer>    
 
       <script defer src="dist/bundle.js"></script>
     </div>
